migration/elasticsearch/es-statefulset.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  labels:
    service: elasticsearch
spec:
  serviceName: es
  replicas: 1
  selector:
    matchLabels:
      service: elasticsearch
  template:
    metadata:
      labels:
        service: elasticsearch 
    spec:                        
      containers:                
      - name: elasticsearch                 
        securityContext:         # Security context holds any special permission given to this container
          capabilities:          # Container will have the capability to IPC Lock , can lock on memory so that it is not swapped out.
            add:
              - IPC_LOCK
        image: quay.io/pires/docker-elasticsearch-kubernetes:5.6.4 
        env:                     # array of environment variables with values are passed to this image
        - name: KUBERNETES_CA_CERTIFICATE_FILE
          value: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
        - name: discovery.zen.ping.unicast.hosts
          value: "elasticsearch-0.es.logging.svc.cluster.local,elasticsearch-1.es.logging.svc.cluster.local,elasticsearch-2.es.logging.svc.cluster.local"
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: "CLUSTER_NAME"
          value: "myesdb"
        - name: "DISCOVERY_SERVICE"
          value: "es"
        - name: NETWORK_HOST 
          value: "_eth0_"
        - name: ES_JAVA_OPTS           #Specify the Heap Size
          value: -Xms256m -Xmx256m
        ports:                         # Ports that this pod will open
        - containerPort: 9200
          name: http
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:                 # The path where volume will be mounted.
        - mountPath: /data
          name: storage               # Name given to this mount
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:               
  - metadata:                         
      name: storage                   
    spec:                             
      storageClassName: gp2           
      accessModes: [ ReadWriteOnce ]  
      resources:                      
        requests:                     
          storage: 30Gi
