migration/elasticsearch/es-svc.yaml
apiVersion: v1               
kind: Service                
metadata:                    
  name: elasticsearch       
  labels:                    
    service: elasticsearch
spec:                        
  type: ClusterIP         
  selector:                  
    service: elasticsearch 
  ports:                     
  - name: http               
    port: 9200               
    protocol: TCP            
  - name: transport          
    port: 9300               
    protocol: TCP
