migration/elasticsearch/headless.yaml
apiVersion: v1               
kind: Service                
metadata:                    
  name: es       
  labels:                    
    service: elasticsearch 
spec:                        
  type: ClusterIP
  clusterIP: None         
  selector:                  
    service: elasticsearch 
  ports:                     
  - name: http               
    port: 9200               
    protocol: TCP            
  - name: transport          
    port: 9300               
    protocol: TCP
